--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,6 +24,16 @@
 
         />
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_bar"
+        android:progressDrawable="@drawable/circular_progress_bar"
+        android:layout_below="@+id/tell_joke_btn"
+        android:layout_alignEnd="@+id/instructions_text_view"
+        android:layout_alignRight="@+id/instructions_text_view" />
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
